--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -2,6 +2,7 @@
   /* light theme color */
   --light-background: #fff;
   --light-background-secondary: #eaeaea;
+  --light-header-background: #e5e6e6;
   --light-color: #222;
   --light-color-secondary: #999;
   --light-border-color: #dcdcdc;
