--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -35,6 +35,7 @@
   display: flex;
   align-items: center;
   text-decoration: none;
+  text-align: left;
 
   & img {
     height: 44px;
@@ -49,6 +50,9 @@
   margin: 5px 0 0 8px;
   border-radius: 50%;
   animation: cursor 3s infinite;
+  @media (--phone) {
+    margin: 0 0 0 5px;
+  }
 }
 
 .text {
@@ -57,6 +61,9 @@
   font-size: 30px;
   font-style: italic;
   text-transform: uppercase;
+  @media (--phone) {
+    font-size: 20px
+  }
 }
 
 .right {
