--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -309,25 +309,21 @@ hr {
 
 footer {
   font-size: 1rem;
-  text-align: center;
-  margin-bottom: 50px;
+  text-align: left;
+  padding-bottom: 50px;
+  div {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
   @media (--phone) {
     display: flex;
     flex-direction: column;
   }
 
-  .footerCopyrights {
-    &:not(:first-of-type) {
-      margin-left: 20px;
-      padding-left: 20px;
-      border-left: 1px solid;
-
-      @media (--phone) {
-        margin: 0;
-        padding: 0;
-        border: none;
-      }
-    }
+  background: linear-gradient( transparent 10%, var(--light-header-background));
+  :global .dark-theme :local & {
+    background: linear-gradient( transparent 10%, var(--dark-header-background));
   }
 }
