--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -2,7 +2,7 @@
   /* light theme color */
   --light-background: #fff;
   --light-background-secondary: #eaeaea;
-  --light-header-background: #e5e6e6;
+  --light-header-background: #caccce;
   --light-color: #222;
   --light-color-secondary: #999;
   --light-border-color: #dcdcdc;
