--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -11,7 +11,7 @@
   --dark-background: #292a2d;
   --dark-background-secondary: #3b3d42;
   --dark-header-background: #191a1a;
-  --dark-color: #a9a9b3;
+  --dark-color: #d2d2da;
   --dark-color-secondary: #73747b;
   --dark-border-color: #4a4b50;
 
