--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -318,6 +318,12 @@ footer {
     width: 90%;
     margin-left: auto;
     margin-right: auto;
+    @media (--phone) {
+      width: 100%;
+      max-width: 660px;
+      padding-left: 20px;
+      padding-right: 20px;
+    }
   }
 
   @media (--phone) {
