--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -66,7 +66,7 @@
   font-weight: 700;
   font-size: 33px;
   font-style: italic;
-  text-transform: uppercase;
+  text-transform: lowercase;
 }
 
 .right {
