--- a/src/styles/post.module.css
+++ b/src/styles/post.module.css
@@ -2,8 +2,8 @@
   width: 100%;
   max-width: 800px;
   text-align: left;
-  padding: 20px;
-  margin: 0 auto 20px;
+  padding: 20px 0 20px 0;
+  margin: 0 auto 20px 5vw;
 
   &:not(:last-of-type) {
     border-bottom: 1px solid var(--light-border-color);
