--- a/src/styles/sidebar.module.css
+++ b/src/styles/sidebar.module.css
@@ -58,21 +58,26 @@
         flex-grow: 1;
         margin-left: 5px;
         margin-bottom: 10px;
+        :focus {
+            background-color: green;
+        }
     }
     .inputbox {
         display: flex;
     }
     .searchresults {
-        /* opacity: 0; */
         position: absolute;
         width: 90%;
         border-radius: 10px;
+        opacity: 0;
+        transition: opacity 0.2s;
         background-color: var(--light-header-background);
         :global .dark-theme :local & {
             background-color: var(--dark-header-background);
         }
         .noresults {
             padding-left: 10px;
+            margin: 1em 0;
             text-align: left;
             font-style: italic;
         }
