--- a/src/styles/navigation.module.css
+++ b/src/styles/navigation.module.css
@@ -2,8 +2,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 70vw;
-  margin: 80px auto 0 5vw;
+  width: 100%;
+  margin: 50px auto 0 auto;
 }
 
 .button {
