--- a/src/styles/postcard.module.css
+++ b/src/styles/postcard.module.css
@@ -5,6 +5,10 @@
   margin: 0 auto 0 5vw;
   padding: 0 0 20px 0;
 
+  @media screen and (max-width: 1200px) {
+    width: 60vw;
+  }
+
   @media (--tablet) {
     max-width: 660px;
     width: 95%;
