--- a/src/styles/post.module.css
+++ b/src/styles/post.module.css
@@ -13,6 +13,10 @@
     }
   }
 
+  @media screen and (max-width: 1200px) {
+    width: 60vw;
+  }
+
   @media (--tablet) {
     max-width: 660px;
     width: 95%;
