--- a/src/styles/navigation.module.css
+++ b/src/styles/navigation.module.css
@@ -15,7 +15,7 @@
   font-size: 1rem;
   font-weight: bold;
   border-radius: 8px;
-  max-width: 40%;
+  /* max-width: 40%; */
   cursor: pointer;
   appearance: none;
 
