--- a/src/styles/postcard.module.css
+++ b/src/styles/postcard.module.css
@@ -1,11 +1,10 @@
 .post {
-  width: 70vw;
-  max-width: 750px;
+  /* width: 70vw;
+  max-width: 750px; */
   text-align: left;
-  margin: 0 auto 0 5vw;
   padding: 0 0 20px 0;
 
-  @media screen and (max-width: 1200px) {
+  /* @media screen and (max-width: 1200px) {
     width: 60vw;
   }
 
@@ -13,7 +12,7 @@
     max-width: 660px;
     width: 95%;
     margin: 0 auto 20px auto;
-  }
+  } */
 
   h1 {
     margin: 0 0 10px;
