--- a/src/styles/sidebar.module.css
+++ b/src/styles/sidebar.module.css
@@ -90,5 +90,8 @@
             text-align: left;
             font-style: italic;
         }
+        @media (--tablet) {
+            width: 100%;
+        }
     }
 }
