--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -320,6 +320,9 @@ hr {
   @media screen and (max-width: 1200px) {
     width: 60vw;
   }
+  @media screen and (min-width: 1600px) {
+    margin-left: 0;
+  }
 }
 
 .hidden {
