--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -20,7 +20,7 @@ body {
   font-weight: 600;
   line-height: 1.54;
   background-color: var(--background);
-  color: var(--color) !important;
+  color: var(--color);
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   font-feature-settings: "liga", "tnum", "case", "calt", "zero", "ss01", "locl";
@@ -30,11 +30,6 @@ body {
   @media (--phone) {
     font-size: 1rem;
   }
-
-  /* &.dark-theme {
-    background-color: var(--background);
-    color: var(--color) !important;
-  } */
 }
 
 h1, h2, h3, h4, h5, h6 {
