--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -43,7 +43,7 @@
 .coverImage {
   border-radius: 8px;
   margin-bottom: 40px;
-  box-shadow: 0 15px 30px rgba(0, 0, 0, .1);
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
 }
 
 .meta {
@@ -54,7 +54,7 @@
 
 .tags {
   margin-top: 10px;
-  opacity: .5;
+  opacity: 0.5;
 }
 
 .tag {
