--- a/src/styles/postcard.css
+++ b/src/styles/postcard.css
@@ -19,7 +19,7 @@
 
 .coverImage {
   border-radius: 8px;
-  box-shadow: 0 15px 30px rgba(0, 0, 0, .1);
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
 }
 
 .meta {
@@ -30,7 +30,7 @@
 
 .tags {
   margin-top: 10px;
-  opacity: .5;
+  opacity: 0.5;
 }
 
 .tag {
