--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,6 +1,7 @@
-@import "./fonts.css";
-@import "./variables.css";
-@import "./prism.css";
+@import './variables.css';
+@import './prism.css';
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Noto+Serif+SC&display=swap');
 
 html {
   box-sizing: border-box;
@@ -15,15 +16,16 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Inter UI', -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI",  Helvetica, Arial, sans-serif;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Roboto', 'Segoe UI',
+    Helvetica, Arial, sans-serif;
   font-size: 1rem;
-  font-weight: 600;
+  font-weight: 500;
   line-height: 1.54;
   background-color: var(--light-background);
   color: var(--light-color);
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
-  font-feature-settings: "liga", "tnum", "case", "calt", "zero", "ss01", "locl";
+  font-feature-settings: 'liga', 'tnum', 'case', 'calt', 'zero', 'ss01', 'locl';
   -webkit-overflow-scrolling: touch;
   -webkit-text-size-adjust: 100%;
 
@@ -37,7 +39,12 @@ body {
   }
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   display: flex;
   align-items: center;
   line-height: 1.3;
@@ -123,7 +130,7 @@ figure {
   figcaption {
     font-size: 14px;
     margin-top: 5px;
-    opacity: .8;
+    opacity: 0.8;
 
     &.left {
       text-align: left;
@@ -147,7 +154,7 @@ code {
   padding: 1px 6px;
   margin: 0 2px;
   border-radius: 5px;
-  font-size: .9rem;
+  font-size: 0.9rem;
 
   .dark-theme & {
     background: var(--dark-background-secondary);
@@ -158,7 +165,7 @@ pre {
   background: #1a1a1d;
   padding: 20px;
   border-radius: 8px;
-  font-size: .9rem;
+  font-size: 0.9rem;
   overflow: auto;
 
   @media (--phone) {
@@ -171,7 +178,7 @@ pre {
     color: #ccc;
     margin: 0;
     padding: 0;
-    font-size: .9rem;
+    font-size: 0.9rem;
   }
 }
 
@@ -202,7 +209,9 @@ table {
   border-radius: 5px;
 }
 
-table, th, td {
+table,
+th,
+td {
   border: 1px solid var(--light-color);
   padding: 10px;
 
@@ -219,7 +228,8 @@ th {
   }
 }
 
-ul, ol {
+ul,
+ol {
   margin-left: 40px;
   padding: 0;
 
@@ -232,8 +242,11 @@ ol ol {
   list-style-type: lower-alpha;
 }
 
-button, input, textarea {
-  font-family: 'Inter UI', -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI",  Helvetica, Arial, sans-serif;
+button,
+input,
+textarea {
+  font-family: 'Inter UI', -apple-system, BlinkMacSystemFont, 'Roboto',
+    'Segoe UI', Helvetica, Arial, sans-serif;
 }
 
 .container {
@@ -388,8 +401,14 @@ footer {
     text-align: center;
   }
 
-  background: linear-gradient( rgba(255,255,255,0) 10%, var(--light-header-background));
+  background: linear-gradient(
+    rgba(255, 255, 255, 0) 10%,
+    var(--light-header-background)
+  );
   :global .dark-theme :local & {
-    background: linear-gradient( rgba(0,0,0,0) 10%, var(--dark-header-background));
+    background: linear-gradient(
+      rgba(0, 0, 0, 0) 10%,
+      var(--dark-header-background)
+    );
   }
 }
